# cuda-ai-2026

./: README.md
default/1_gelu_omp/babayan_konstantin/: gelu_omp.cpp
default/1_gelu_omp/pushchin_alexey/: gelu_omp.cpp
default/1_gelu_omp/rodygin_vadim/: gelu_omp.cpp
default/1_gelu_omp/zinoviev_vladimir/: gelu_omp.cpp
default/1_gelu_omp/zlobin_george/: gelu_omp.cpp
default/2_gelu_cuda/babayan_konstantin/: gelu_cuda.cu
default/2_gelu_cuda/belov_dmitry/: gelu_cuda.cu
default/2_gelu_cuda/chekmaryov_petr/: gelu_cuda.cu
default/2_gelu_cuda/kireev_daniil/: log.txt
default/2_gelu_cuda/pushchin_alexey/: gelu_cuda.cu  log.txt
default/2_gelu_cuda/zinoviev_vladimir/: gelu_cuda.cu
default/3_naive_gemm_cuda/babayan_konstantin/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/belov_dmitry/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/chervyakov_ivan/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/kryukov_dmitry/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/pashchenkov_maxim/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/pushchin_alexey/: log.txt  naive_gemm_cuda.cu
default/3_naive_gemm_cuda/putilin_artyom/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/volkovskiy_pavel/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zlobin_george/: naive_gemm_cuda.cu
default/4_block_gemm_cuda/babayan_konstantin/: block_gemm_cuda.cu
default/4_block_gemm_cuda/belov_dmitry/: block_gemm_cuda.cu  log.txt
default/4_block_gemm_cuda/chekmaryov_petr/: block_gemm_cuda.cu
default/5_gemm_cublas/ermilov_dmitry/: CMakeLists.txt  gemm_cublas.cu  gemm_cublas.h  main.cpp
(+53 files in other folders)
